--- a/src/server_manager/ui_components/outline-feedback-dialog.html
+++ b/src/server_manager/ui_components/outline-feedback-dialog.html
@@ -49,20 +49,24 @@ see https://github.com/PolymerElements/paper-swatch-picker/issues/36 -->
         just one line).
       */
       #userFeedback {
-        max-height: 150px;
+        max-height: 175px;
         overflow-x: hidden;
         overflow-y: scroll;
-      }
-
-      #userEmail {
-        /* compensate for extra space added for #userFeedback's error label */
-        margin-top: -10px;
       }
       p a {
         color: var(--primary-green);
       }
+      p.disclaimer {
+        margin: 0;
+        font-size: 12px;
+      }
       paper-input, paper-textarea, paper-dropdown-menu {
         --paper-input-container-focus-color: var(--primary-green);
+      }
+      paper-textarea {
+        --iron-autogrow-textarea: {
+          background: #eee;
+        }
       }
       #feedbackExplanation {
         display: none;
@@ -82,16 +86,27 @@ see https://github.com/PolymerElements/paper-swatch-picker/issues/36 -->
       <h2>[[title]]</h2>
       <div id='feedbackWrapper'>
         <p id='feedbackExplanation'>[[feedbackExplanation]]</p>
-        <paper-dropdown-menu id='feedbackCategory' horizontal-align='left'>
-          <paper-listbox id='feedbackCategoryListbox' slot='dropdown-content'class='dropdown-content' selected='0'>
-            <paper-item>General Feedback</paper-item>
-            <paper-item>Performance</paper-item>
-            <paper-item>Server Connection</paper-item>
-            <paper-item>Installation Failed</paper-item>
+        <paper-dropdown-menu id='feedbackCategory' horizontal-align='left' on-selected-item-changed='feedbackCategoryChanged'>
+          <paper-listbox id='feedbackCategoryListbox' slot='dropdown-content' class='dropdown-content' selected='0'>
+            <paper-item>General feedback</paper-item>
+            <paper-item>Having trouble installing Outline</paper-item>
+            <paper-item>Can't connect to my server</paper-item>
+            <paper-item>Others can't connect to my server</paper-item>
+            <paper-item>Having trouble managing my server</paper-item>
+            <paper-item>Suggestions</paper-item>
           </paper-listbox>
         </paper-dropdown-menu>
-        <paper-textarea id='userFeedback' type='text' placeholder='Your feedback' error-message='Please enter feedback.' on-value-changed='userFeedbackValueChanged'></paper-textarea>
-        <paper-input id='userEmail' type='text' placeholder='Email address (optional)'></paper-input>
+        <paper-dropdown-menu id='cloudProvider' horizontal-align='left' placeholder='Select cloud provider' hidden$="[[!shouldShowCloudProvider]]" error-message="Please select a cloud provider">
+          <paper-listbox id='cloudProviderListbox' slot='dropdown-content' class='dropdown-content'>
+            <paper-item>DigitalOcean</paper-item>
+            <paper-item>Amazon Web Services</paper-item>
+            <paper-item>Google Cloud Platform</paper-item>
+            <paper-item>Other</paper-item>
+          </paper-listbox>
+        </paper-dropdown-menu>
+        <paper-input id='userEmail' type='text' placeholder='Email address (optional)' on-value-changed='userEmailValueChanged'></paper-input>
+        <p class="disclaimer" hidden$=[[!shouldShowLanguageDisclaimer]]>Please note that our team is only able to answer feedback in English.</p>
+        <paper-textarea id='userFeedback' type='text' label='Your feedback' always-float-label rows="4" error-message='Please enter feedback.' on-value-changed='userFeedbackValueChanged'></paper-textarea>
         <p>
           Your feedback, email address (if provided) and additional information
           referred to in the <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection">privacy policy</a>
@@ -115,11 +130,25 @@ see https://github.com/PolymerElements/paper-swatch-picker/issues/36 -->
           readonly: true,
           value: { // Maps a category to its `feedbackCategoryListbox` item index.
             GENERAL: 0,
-            PERFORMANCE: 1,
+            INSTALLATION: 1,
             CONNECTION: 2,
-            INSTALLATION: 3
+            CONNECTION_OTHERS: 3,
+            MANAGEMENT: 4,
+            SUGGESTIONS: 5,
           }
-        }
+        },
+        hasEnteredEmail: {
+          type: Boolean,
+          value: false
+        },
+        shouldShowCloudProvider: {
+          type: Boolean,
+          value: false,
+        },
+        shouldShowLanguageDisclaimer: {
+          type: Boolean,
+          computed: '_computeShouldShowLanguageDisclaimer(hasEnteredEmail)',
+        },
       },
       open: function(prepopulatedMessage, showInstallationFailed, feedbackCategory = 0) {
         // Clear all fields, in case feedback had already been entered.
@@ -127,7 +156,7 @@ see https://github.com/PolymerElements/paper-swatch-picker/issues/36 -->
           this.title = 'Outline Server Installation Failed';
           this.feedbackExplanation = 'An error occurred while attempting to install Outline on your server. If you haven\'t been able to figure out a solution, please consider sending us feedback and telling us your email address (optional) so that we can get back to you.';
           this.$.dialog.classList.add('installationFailed');
-          this.$.feedbackCategoryListbox.selected = 3;
+          this.$.feedbackCategoryListbox.selected = this.feedbackCategories.INSTALLATION;
         } else {
           this.title = 'Send Feedback';
           this.feedbackExplanation = '';
@@ -137,6 +166,7 @@ see https://github.com/PolymerElements/paper-swatch-picker/issues/36 -->
         this.$.userFeedback.invalid = false;
         this.$.userFeedback.value = prepopulatedMessage || '';
         this.$.userEmail.value = '';
+        this.$.cloudProviderListbox.selected = undefined;
         this.$.dialog.open();
       },
       submitTappedHandler: function() {
@@ -150,8 +180,26 @@ see https://github.com/PolymerElements/paper-swatch-picker/issues/36 -->
           userFeedback: this.$.userFeedback.value,
           userEmail: this.$.userEmail.value,
         };
+        const selectedCloudProvider = this.$.cloudProvider.selectedItemLabel;
+        if (this.shouldShowCloudProvider && !!selectedCloudProvider) {
+          data['cloudProvider'] = selectedCloudProvider;
+        }
         this.fire('SubmitFeedback', data);
         this.$.dialog.close();
+      },
+      userEmailValueChanged: function () {
+        this.hasEnteredEmail = !!this.$.userEmail.value;
+      },
+      feedbackCategoryChanged: function() {
+        const selectedCategory = this.$.feedbackCategoryListbox.selected;
+        if (selectedCategory === this.feedbackCategories.INSTALLATION ||
+            selectedCategory === this.feedbackCategories.CONNECTION ||
+            selectedCategory === this.feedbackCategories.CONNECTION_OTHERS) {
+          this.shouldShowCloudProvider = true;
+        } else {
+          this.shouldShowCloudProvider = false;
+        }
+        this.$.dialog.notifyResize();
       },
       userFeedbackValueChanged: function() {
         // Hides any error message when the user starts typing feedback.
@@ -159,7 +207,12 @@ see https://github.com/PolymerElements/paper-swatch-picker/issues/36 -->
 
         // Make the paper-dialog (vertically) re-center.
         this.$.dialog.notifyResize();
-      }
+      },
+      // Returns whether the window's locale is English (i.e. EN, en-US) and the user has
+      // entered their email.
+      _computeShouldShowLanguageDisclaimer: function (hasEnteredEmail) {
+        return !window.navigator.language.match(/^en/i) && hasEnteredEmail;
+      },
     });
   </script>
 </dom-module>
