Update UI layout, color scheme

--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -35,6 +35,7 @@
         padding: 12px;
       }
       .card {
+        background-color: var(--background-contrast-color);
         display: flex;
         flex-direction: column;
         justify-content: space-between;
