--- a/src/server_manager/ui_components/outline-step-view.html
+++ b/src/server_manager/ui_components/outline-step-view.html
@@ -22,7 +22,7 @@
         display: block;
       }
       .step-header {
-        padding: 48px 24px 24px;
+        padding: 64px 24px 24px;
         vertical-align: middle;
         height: auto;
         text-align: left;
@@ -33,10 +33,10 @@
         line-height: 28px;
       }
       .step-title {
-        color: rgba(255, 255, 255, 0.87);
+        color: var(--light-gray);
       }
       .step-description {
-        color: rgba(255, 255, 255, 0.54);
+        color: var(--medium-gray);
       }
     </style>
     <div class="step-header">
