--- a/src/server_manager/ui_components/app-root.html
+++ b/src/server_manager/ui_components/app-root.html
@@ -15,6 +15,7 @@
 -->
 <link rel='import' href='../bower_components/polymer/polymer.html'>
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
+<link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
 <link rel='import' href='../bower_components/iron-icon/iron-icon.html'>
 <link rel='import' href='../bower_components/iron-icons/iron-icons.html'>
 <link rel='import' href='../bower_components/iron-pages/iron-pages.html'>
@@ -43,7 +44,11 @@
       :host {
         width: 100%;
         --primary-green: #00bfa5;
-        --light-gray: color: rgba(0,0,0,0.54);
+        --background-color: #263238;
+        --background-contrast-color: #2e3a3f;
+        --light-gray: rgba(255, 255, 255, 0.87);
+        --medium-gray: rgba(255, 255, 255, 0.54);
+        --status-bar-width: 48px;
       }
       #toast {
         align-items: center;
@@ -59,118 +64,142 @@
         height: 20px;
         width: 20px;
       }
-      #settingsDrawer {
-        z-index: 1000;
-        margin-top: 12px;
+      #appDrawer {
+        --app-drawer-content-container: {
+          background-color: var(--background-contrast-color);
+        };
       }
-      #settingsDrawer paper-listbox {
-        color: var(--light-gray);
+      #appDrawer paper-listbox {
+        color: var(--medium-gray);
+        background-color: var(--background-contrast-color);
       }
-      #settingsDrawer paper-icon-item {
+      #appDrawer paper-icon-item {
         display: block;
         cursor: pointer;
         padding: 12px 24px 12px 24px;
         font-size: 14px;
       }
-      #settingsDrawer iron-icon {
+      #appDrawer iron-icon {
         margin-right: 12px;
       }
-      #settingsDrawer paper-icon-item:hover,
-      #settingsDrawer paper-icon-item iron-icon:hover {
+      #appDrawer paper-icon-item:hover,
+      #appDrawer paper-icon-item iron-icon:hover {
         color: var(--primary-green);
       }
-      #settingsDrawer a {
+      #appDrawer a {
         color: inherit;
       }
-      #settingsDrawer paper-icon-item:focus,
-      #settingsDrawer a:focus {
+      #appDrawer paper-icon-item:focus,
+      #appDrawer a:focus {
         outline: none;
       }
-      #settingsDrawer #signedIn {
+      #appDrawer #signedIn {
         text-align: center;
       }
-      #settingsDrawer #signedIn img {
+      #appDrawer #signedIn img {
         height: 65px;
         margin-top: 12px;
       }
-      #settingsDrawer #signOutButton  {
+      #appDrawer #signOutButton  {
         font-weight: bold;
         margin-bottom: 24px;
         cursor: pointer;
         text-transform: uppercase;
       }
-      #settingsDrawer #signOutButton:hover {
+      #appDrawer #signOutButton:hover {
         color: var(--primary-green);
       }
-      app-toolbar paper-icon-button {
-        /* needed so the "Outline Manager" title appears centered in the window. */
-        position: absolute;
-      }
-      app-toolbar [main-title] {
-        text-align: center;
+      app-drawer-layout app-toolbar {
+        background-color: var(--background-contrast-color);
+        border-bottom: 1px solid rgba(200, 200, 200, 0.12);
       }
       app-toolbar [main-title] img {
         height: 16px;
         margin-top: 8px;
+      }
+      .side-bar-margin {
+        margin-left: var(--status-bar-width);
+      }
+      #sideBar {
+        --app-drawer-width: var(--status-bar-width);
+        --app-drawer-content-container: {
+          background-color: var(--background-contrast-color);
+        };
+      }
+      #sideBar div {
+        margin-top: 12px;
+        height: 100%;
+        text-align: center;
+        color: var(--light-gray);
       }
     </style>
 
     <outline-tos-view id="tosView" has-accepted-terms-of-service={{userAcceptedTos}} hidden$="{{hasAcceptedTos}}"></outline-tos-view>
 
     <div hidden$="{{!hasAcceptedTos}}">
-      <app-drawer id="settingsDrawer">
-        <div id='signedIn' hidden$='{{!isSignedIn}}'>
-          <img src='images/manager-profile-2x.png'>
-          <p>{{adminEmail}}</p>
-          <div id='signOutButton' on-tap='signOutTapped'>Sign Out</div>
-          <hr/>
+      <app-drawer-layout id="drawerLayout" responsive-width="768px" on-narrow-changed="_computeShouldShowSideBar" class$="[[sideBarMarginClass]]">
+        <app-drawer id="appDrawer" slot="drawer" on-opened-changed="_computeShouldShowSideBar">
+          <app-toolbar class="toolbar" hidden$="[[shouldShowSideBar]]">
+            <paper-icon-button icon="menu" on-click="_toggleAppDrawer"></paper-icon-button>
+            <div main-title><img src="images/outline-manager-logo.svg"></div>
+          </app-toolbar>
+
+          <div id='signedIn' hidden$='{{!isSignedIn}}'>
+            <img src='images/manager-profile-2x.png'>
+            <p>{{adminEmail}}</p>
+            <div id='signOutButton' on-tap='signOutTapped'>Sign Out</div>
+            <hr/>
+          </div>
+          <paper-listbox on-tap="maybeCloseDrawer">
+            <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection">
+              <paper-icon-item>
+                <iron-icon icon="lock" slot="item-icon"></iron-icon>Data Collection
+              </paper-icon-item>
+            </a>
+            <a href="https://www.google.com/policies/privacy/">
+              <paper-icon-item>
+                <iron-icon icon="lock" slot="item-icon"></iron-icon>Privacy
+              </paper-icon-item>
+            </a>
+            <a href="https://s3.amazonaws.com/outline-vpn/static_downloads/Outline-Terms-of-Service.html">
+              <paper-icon-item>
+                  <iron-icon icon="info" slot="item-icon"></iron-icon>Terms
+              </paper-icon-item>
+            </a>
+            <paper-icon-item on-tap="submitFeedbackTapped">
+              <iron-icon icon="feedback" slot="item-icon"></iron-icon>Submit Feedback
+            </paper-icon-item>
+            <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/">
+              <paper-icon-item>
+                <iron-icon icon="help" slot="item-icon"></iron-icon>Help Center
+              </paper-icon-item>
+            </a>
+            <paper-icon-item on-tap="aboutTapped">
+              <iron-icon icon="info" slot="item-icon"></iron-icon>About Outline
+            </paper-icon-item>
+            <paper-icon-item on-tap="showLicensesTapped">
+              <iron-icon icon="info" slot="item-icon"></iron-icon>Show Licenses
+            </paper-icon-item>
+          </paper-listbox>
+        </app-drawer>
+
+        <app-header-layout>
+          <iron-pages attr-for-selected='id' selected='{{ currentPage }}'>
+            <outline-intro-step id='intro'></outline-intro-step>
+            <outline-do-oauth-step id='digitalOceanOauth'></outline-do-oauth-step>
+            <outline-manual-server-entry id='manualEntry'></outline-manual-server-entry>
+            <outline-region-picker-step id='regionPicker'></outline-region-picker-step>
+            <outline-server-progress-step id='serverProgressStep'></outline-server-progress-step>
+            <outline-server-view id='serverView'></outline-server-view>
+          </iron-pages>
+        </app-header-layout>
+      </app-drawer-layout>
+
+      <app-drawer id="sideBar" opened$="[[shouldShowSideBar]]" persistent>
+        <div>
+          <paper-icon-button icon="menu" on-click="_toggleAppDrawer"></paper-icon-button>
         </div>
-        <paper-listbox on-tap="closeSettingsDrawer">
-          <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection">
-            <paper-icon-item>
-              <iron-icon icon="lock" slot="item-icon"></iron-icon>Data Collection
-            </paper-icon-item>
-          </a>
-          <a href="https://www.google.com/policies/privacy/">
-            <paper-icon-item>
-              <iron-icon icon="lock" slot="item-icon"></iron-icon>Privacy
-            </paper-icon-item>
-          </a>
-          <a href="https://s3.amazonaws.com/outline-vpn/static_downloads/Outline-Terms-of-Service.html">
-            <paper-icon-item>
-                <iron-icon icon="info" slot="item-icon"></iron-icon>Terms
-            </paper-icon-item>
-          </a>
-          <paper-icon-item on-tap="submitFeedbackTapped">
-            <iron-icon icon="feedback" slot="item-icon"></iron-icon>Submit Feedback
-          </paper-icon-item>
-          <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/">
-            <paper-icon-item>
-              <iron-icon icon="help" slot="item-icon"></iron-icon>Help Center
-            </paper-icon-item>
-          </a>
-          <paper-icon-item on-tap="aboutTapped">
-            <iron-icon icon="info" slot="item-icon"></iron-icon>About Outline
-          </paper-icon-item>
-          <paper-icon-item on-tap="showLicensesTapped">
-            <iron-icon icon="info" slot="item-icon"></iron-icon>Show Licenses
-          </paper-icon-item>
-        </paper-listbox>
       </app-drawer>
-
-      <app-toolbar class='toolbar'>
-        <paper-icon-button icon="menu" on-tap="toggleSettingsDrawer"></paper-icon-button>
-        <div main-title><img src="images/outline-manager-logo.svg"></div>
-      </app-toolbar>
-
-      <iron-pages attr-for-selected='id' selected='{{ currentPage }}'>
-        <outline-intro-step id='intro'></outline-intro-step>
-        <outline-do-oauth-step id='digitalOceanOauth'></outline-do-oauth-step>
-        <outline-manual-server-entry id='manualEntry'></outline-manual-server-entry>
-        <outline-region-picker-step id='regionPicker'></outline-region-picker-step>
-        <outline-server-progress-step id='serverProgressStep'></outline-server-progress-step>
-        <outline-server-view id='serverView'></outline-server-view>
-      </iron-pages>
 
       <paper-toast id='toast'><paper-icon-button icon='icons:close' on-tap='closeError'></paper-icon-button></paper-toast>
 
@@ -188,6 +217,7 @@
           <paper-button dialog-dismiss autofocus>Close</paper-button>
         </div>
       </paper-dialog>
+
     </div>
   </template>
   <script>
@@ -216,7 +246,19 @@
         currentPage: {
           type: String,
           value: 'intro'
-        }
+        },
+        shouldShowSideBar: {
+          type: Boolean,
+          value: false
+        },
+        sideBarMarginClass: {
+          type: String,
+          computed: '_computeSideBarMarginClass(shouldShowSideBar)'
+        },
+        isDrawerCollapsed: {
+          type: Boolean,
+          value: false
+        },
       },
       listeners: {
         'RegionSelected': 'handleRegionSelected',
@@ -339,11 +381,25 @@
       _computeHasAcceptedTermsOfService: function(userAcceptedTos) {
         return userAcceptedTos || !!window.localStorage[TOS_ACK_LOCAL_STORAGE_KEY];
       },
-      toggleSettingsDrawer: function() {
-        this.$.settingsDrawer.toggle();
+      _toggleAppDrawer: function() {
+        const drawerNarrow = this.$.drawerLayout.narrow;
+        const forceNarrow = this.$.drawerLayout.forceNarrow;
+        if (drawerNarrow) {
+          if (forceNarrow) {
+            // The window width is below the responsive threshold. Do not force narrow mode.
+            this.$.drawerLayout.forceNarrow = false;
+          }
+          this.$.appDrawer.toggle();
+        } else {
+          // Forcing narrow mode when the window width is above the responsive threshold effectively
+          // collapses the drawer. Conversely, reverting force narrow expands the drawer.
+          this.$.drawerLayout.forceNarrow = !forceNarrow;
+        }
       },
-      closeSettingsDrawer: function() {
-        this.$.settingsDrawer.close();
+      maybeCloseDrawer: function() {
+        if (this.$.drawerLayout.narrow || this.$.drawerLayout.forceNarrow) {
+          this.$.appDrawer.close();
+        }
       },
       submitFeedbackTapped: function () {
         this.$.feedbackDialog.open();
@@ -352,7 +408,6 @@
         this.$.aboutDialog.open();
       },
       signOutTapped: function() {
-        this.closeSettingsDrawer();
         this.fire('SignOutRequested');
       },
       openManualInstallFeedback: function(prepopulatedMessage) {
@@ -366,7 +421,6 @@
         return this.$.modalDialog.close();
       },
       showLicensesTapped: function () {
-        this.closeSettingsDrawer();
         var xhr = new XMLHttpRequest();
         xhr.onload = () => {
           this.$.licensesText.innerText = xhr.responseText;
@@ -377,7 +431,19 @@
         };
         xhr.open('GET', '/ui_components/licenses/licenses.txt', true);
         xhr.send();
-      }
+      },
+      _computeShouldShowSideBar: function() {
+        const drawerNarrow = this.$.drawerLayout.narrow;
+        const drawerOpened = this.$.appDrawer.opened;
+        if (drawerOpened && drawerNarrow) {
+          this.shouldShowSideBar = false;
+        } else {
+          this.shouldShowSideBar = drawerNarrow;
+        }
+      },
+      _computeSideBarMarginClass: function(shouldShowSideBar) {
+        return shouldShowSideBar ? 'side-bar-margin' : '';
+      },
     });
   </script>
 </dom-module>
